# HTMLCut

./: .gitattributes  .gitignore  .ignore  AGENT.md  AGENTS.md  CONTRIBUTING.md  Cargo.toml  NOTICE  PATENTS.md  README.md  changelog.md  check.sh  deny.toml  eslint.config.js  package-lock.json  package.json  rust-toolchain.toml
crates/htmlcut-cli/: Cargo.toml
crates/htmlcut-cli/src/: args.rs  error.rs  execute.rs  file_output.rs  help.rs  lib.rs  lookup.rs  main.rs  metadata.rs  model.rs  prepare.rs  render.rs  tests.rs
crates/htmlcut-cli/src/args/: discovery.rs  extract.rs  inspect.rs  mod.rs  shared.rs
crates/htmlcut-cli/src/contract/: mod.rs  operation_specs.rs  operations.rs  types.rs
crates/htmlcut-cli/src/execute/: cli_io.rs  commands.rs  outcomes.rs  raw_args.rs
crates/htmlcut-cli/src/help/: cache.rs  mod.rs  render.rs
crates/htmlcut-cli/src/model/: catalog.rs  error_codes.rs  mod.rs  reports.rs  schema.rs
crates/htmlcut-cli/src/prepare/: build.rs  definition.rs  extraction.rs  inspection.rs  reports.rs
crates/htmlcut-cli/src/render/: discovery.rs  inspection.rs
crates/htmlcut-cli/src/tests/: contracts.rs  mod.rs  rendering.rs
crates/htmlcut-cli/tests/: cli.rs  discovery.rs  getting_started_examples.rs  help.rs  help_and_request_file.rs  inspect.rs  parity.rs  readme_examples.rs  select.rs  slice.rs  transport.rs
crates/htmlcut-cli/tests/inspect/: errors.rs  runtime.rs  select.rs  slice.rs  source.rs
crates/htmlcut-cli/tests/parity/: extraction.rs  helpers.rs  inspection.rs
crates/htmlcut-cli/tests/support/: mod.rs
crates/htmlcut-core/: Cargo.toml
crates/htmlcut-core/examples/: request_and_result_namespaces.rs
crates/htmlcut-core/examples/support/: request_and_result_namespaces.rs  reusable_extraction_definition.rs
crates/htmlcut-core/src/: catalog.rs  diagnostics.rs  doctests.rs  document.rs  extract.rs  fmt.rs  inspect.rs  lib.rs  schema.rs  selector_parse.rs  source.rs  tests.rs
crates/htmlcut-core/src/cli_contract/: help.rs  operation_specs.rs  operations.rs  types.rs
crates/htmlcut-core/src/contracts/: constants.rs  mod.rs  request.rs  results.rs
crates/htmlcut-core/src/document/: mod.rs  parse.rs  render.rs  signals.rs  summary.rs  urls.rs
crates/htmlcut-core/src/extract/: engine.rs  mod.rs  selector.rs  slice.rs
crates/htmlcut-core/src/inspect/: mod.rs
crates/htmlcut-core/src/interop/: ffhn_v1.rs  mod.rs  v1.rs
crates/htmlcut-core/src/schema/: constraints.rs
crates/htmlcut-core/src/source/: http.rs  io.rs  metadata.rs  mod.rs
crates/htmlcut-core/src/tests/: catalog.rs  document.rs  examples_api.rs  extract_api.rs  extraction.rs  inspection.rs  interop_v1.rs  mod.rs  request_contracts.rs  source.rs  wire.rs
crates/htmlcut-core/src/wire/: mod.rs  v1.rs
crates/htmlcut-core/tests/: examples.rs  extract.rs  ffhn_v1.rs  v1.rs  v1_acceptance.rs  v1_properties.rs
crates/htmlcut-tempdir/: Cargo.toml
crates/htmlcut-tempdir/src/: lib.rs
fuzz/: Cargo.toml  README.md
fuzz/corpus/cli_parse_error_surface/: human_inspect.seed  structured_equals.seed  structured_flag.seed
fuzz/corpus/extraction_request_building/: delimiter_plan.seed  selector_plan.seed
fuzz/corpus/parse_document_bytes/: document_with_base.html  fragment_links.html
fuzz/corpus/selector_parsing/: card_links.seed  nested_blocks.seed
fuzz/corpus/slice_boundaries/: literal_article.seed  regex_block.seed
fuzz/fuzz_targets/: cli_parse_error_surface.rs  extraction_request_building.rs  parse_document_bytes.rs  selector_parsing.rs  slice_boundaries.rs  support.rs
fuzz/fuzz_targets/support/: cli.rs  interop.rs  interop_common.rs  parse.rs  request_common.rs  selector.rs  slice.rs
semver-baseline/htmlcut-core/: .cargo_vcs_info.json  BASELINE.toml  Cargo.toml  Cargo.toml.orig
semver-baseline/htmlcut-core/examples/: reusable_extraction_definition.rs
semver-baseline/htmlcut-core/examples/support/: request_and_result_namespaces.rs  reusable_extraction_definition.rs
semver-baseline/htmlcut-core/src/: catalog.rs  cli_choice.rs  cli_contract.rs  diagnostics.rs  document.rs  extract.rs  inspect.rs  lib.rs  schema.rs  source.rs  tests.rs
semver-baseline/htmlcut-core/src/cli_contract/: help.rs  mod.rs
semver-baseline/htmlcut-core/src/contracts/: constants.rs  mod.rs  results.rs
semver-baseline/htmlcut-core/src/document/: mod.rs  parse.rs  render.rs  signals.rs  urls.rs
semver-baseline/htmlcut-core/src/extract/: engine.rs  mod.rs  selection.rs  selector.rs
semver-baseline/htmlcut-core/src/inspect/: samples.rs  selectors.rs  text.rs
semver-baseline/htmlcut-core/src/schema/: mod.rs
semver-baseline/htmlcut-core/src/source/: http.rs  io.rs  metadata.rs  mod.rs  types.rs
semver-baseline/htmlcut-core/src/tests/: catalog.rs  document.rs  inspection.rs  interop_v1.rs  mod.rs  source.rs  wire.rs
semver-baseline/htmlcut-core/src/wire/: v1.rs
semver-baseline/htmlcut-core/tests/: extract.rs  ffhn_v1_acceptance.rs  v1.rs  v1_acceptance.rs  v1_properties.rs
xtask/: Cargo.toml
xtask/src/: app.rs  command_exec.rs  coverage.rs  fuzz.rs  host_tools.rs  hygiene.rs  lib.rs  main.rs  manifest.rs  miri.rs  model.rs  outdated.rs  plan.rs  policy.rs  preflight.rs  release.rs  tests.rs  toolchain.rs
xtask/src/app/: gates.rs
xtask/src/coverage/: commands.rs  mod.rs  report.rs  syntax.rs  tracking.rs
xtask/src/docs/: commands.rs  identifiers.rs  legal.rs  links.rs  metadata.rs  mod.rs  paths.rs  release.rs
xtask/src/docs/commands/: mod.rs  parsing.rs  runtime.rs  sandbox.rs  testing.rs
xtask/src/gate_report/: mod.rs  model.rs  tests.rs
xtask/src/hygiene/: mod.rs  support.rs
xtask/src/plan/: check.rs  mod.rs  paths.rs  semver.rs
xtask/src/structure/: metrics.rs  mod.rs  policy.rs  tests.rs
xtask/src/tests/: app.rs  command_exec.rs  coverage.rs  devcontainer.rs  fuzz.rs  host_tools.rs  hygiene.rs  miri.rs  mod.rs  outdated.rs  plan.rs  policy.rs  preflight.rs  release.rs  semver_baseline.rs  toolchain.rs  versions.rs
xtask/src/tests/app/: check_flow.rs  mod.rs  (+3 more)
xtask/tests/: gate_reporting.rs  help.rs
xtask/tests/support/: mod.rs
(+490 files in other folders)
