[workspace]
members = [
    "crates/htmlcut-core",
    "crates/htmlcut-cli",
    "crates/htmlcut-tempdir",
    "fuzz",
    "xtask",
]
exclude = ["semver-baseline/htmlcut-core"]
resolver = "3"

[workspace.package]
version = "4.4.0"
edition = "2024"
rust-version = "1.95.0"
description = "Extract and inspect HTML from files, URLs, and stdin with CSS selectors, literal or regex slicing, and structured reports."
license = "MIT"
authors = ["Ervins Strauhmanis"]
repository = "https://github.com/resoltico/HTMLCut"
homepage = "https://github.com/resoltico/HTMLCut"

[workspace.dependencies]
arbitrary = { version = "1.4.2", features = ["derive"] }
assert_cmd = "2.2.0"
clap = { version = "4.6.0", features = ["derive"] }
ego-tree = "0.11.0"
htmlcut-cli = { path = "crates/htmlcut-cli", version = "4.4.0" }
htmlcut-core = { path = "crates/htmlcut-core", version = "4.4.0" }
htmlcut-tempdir = { path = "crates/htmlcut-tempdir", version = "4.4.0" }
libfuzzer-sys = "0.4.12"
predicates = "3.1.4"
regex = "1.12.3"
scraper = { version = "0.26.0", default-features = false, features = ["errors"] }
schemars = { version = "1.0.4", features = ["url2"] }
shell-words = "1.1.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_path_to_error = "0.1.20"
sha2 = "0.11.0"
thiserror = "2.0.18"
ureq = { version = "3.3.0", default-features = false, features = ["gzip", "platform-verifier", "rustls"] }
url = { version = "2.5.8", features = ["serde"] }

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.lints.clippy]
all = "warn"

[profile.dist]
inherits = "release"
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"
