[workspace]
members = [
    "crates/htmlcut-core",
    "crates/htmlcut-cli",
    "crates/htmlcut-tempdir",
    "fuzz",
    "xtask",
]
default-members = [
    "crates/htmlcut-core",
    "crates/htmlcut-cli",
    "crates/htmlcut-tempdir",
]
exclude = ["semver-baseline/htmlcut-core"]
resolver = "3"

[workspace.package]
version = "12.0.0"
edition = "2024"
rust-version = "1.97"
description = "Extract and inspect HTML from files, HTTP(S) URLs, or stdin with CSS selectors, literal or regex slicing, reusable request files, and JSON reports."
license = "MIT"
authors = ["Ervins Strauhmanis"]
repository = "https://github.com/resoltico/HTMLCut"
homepage = "https://github.com/resoltico/HTMLCut"

[workspace.dependencies]
arbitrary = { version = "1.4.2", features = ["derive"] }
assert_cmd = "2.2.2"
boon = "0.6.1"
clap = { version = "4.6.1", features = ["derive"] }
cssparser = "0.37.0"
ego-tree = "0.11.0"
htmlcut-cli = { path = "crates/htmlcut-cli", version = "12.0.0" }
htmlcut-core = { path = "crates/htmlcut-core", version = "12.0.0" }
htmlcut-tempdir = { path = "crates/htmlcut-tempdir", version = "12.0.0" }
libfuzzer-sys = "0.4.13"
predicates = "3.1.4"
regex = "1.13.0"
# The selector/parser stack must travel with htmlcut-core into downstream git consumers.
scraper = { package = "htmlcut-scraper", path = "patches/rust/scraper", version = "0.27.0-htmlcut.1", default-features = false, features = ["errors"] }
schemars = { version = "1.2.1", features = ["url2"] }
selectors = { package = "htmlcut-selectors", path = "patches/rust/selectors", version = "0.38.0-htmlcut.1" }
shell-words = "1.1.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_path_to_error = "0.1.20"
sha2 = "0.11.0"
thiserror = "2.0.18"
time = { version = "0.3.53", features = ["formatting", "parsing"] }
toml = "1.1.2"
ureq = { version = "3.3.0", default-features = false, features = ["gzip", "rustls", "platform-verifier"] }
url = { version = "2.5.8", features = ["serde"] }

[workspace.lints.rust]
unsafe_code = "forbid"
unsafe_op_in_unsafe_fn = "deny"
unused_must_use = "deny"

[workspace.lints.clippy]
all = "warn"

[profile.dist]
inherits = "release"
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"
