[package]
name = "htmlcut-fuzz"
version = "0.0.0"
edition = "2024"
rust-version = "1.95.0"
publish = false
description = "libFuzzer targets for htmlcut-core's maintained public surfaces."
license = "MIT"
repository = "https://github.com/resoltico/HTMLCut"

[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary = { version = "1.4.2", features = ["derive"] }
htmlcut-core = { path = "../crates/htmlcut-core" }
libfuzzer-sys = "0.4.12"
url = "2.5.8"

[[bin]]
name = "parse_document_bytes"
path = "fuzz_targets/parse_document_bytes.rs"
test = false
doc = false
bench = false

[[bin]]
name = "selector_parsing"
path = "fuzz_targets/selector_parsing.rs"
test = false
doc = false
bench = false

[[bin]]
name = "slice_boundaries"
path = "fuzz_targets/slice_boundaries.rs"
test = false
doc = false
bench = false

[[bin]]
name = "extraction_request_building"
path = "fuzz_targets/extraction_request_building.rs"
test = false
doc = false
bench = false

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = "warn"
