[package]
name = "htmlcut-fuzz"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false
description = "libFuzzer targets for htmlcut-core's maintained public surfaces."
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[package.metadata]
cargo-fuzz = true

[features]
default = []
fuzzing = []

[dependencies]
arbitrary.workspace = true
htmlcut-cli.workspace = true
htmlcut-core.workspace = true
libfuzzer-sys.workspace = true
url.workspace = true

[lints]
workspace = true

[[bin]]
name = "parse_document_bytes"
path = "fuzz_targets/parse_document_bytes.rs"
test = false
doc = false
bench = false

[[bin]]
name = "selector_parsing"
path = "fuzz_targets/selector_parsing.rs"
test = false
doc = false
bench = false

[[bin]]
name = "slice_boundaries"
path = "fuzz_targets/slice_boundaries.rs"
test = false
doc = false
bench = false

[[bin]]
name = "extraction_request_building"
path = "fuzz_targets/extraction_request_building.rs"
test = false
doc = false
bench = false

[[bin]]
name = "cli_parse_error_surface"
path = "fuzz_targets/cli_parse_error_surface.rs"
test = false
doc = false
bench = false
