[package]
name = "xtask"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false
description = "Rust-native repository maintenance tasks for HTMLCut."

[dependencies]
clap.workspace = true
htmlcut-cli.workspace = true
htmlcut-core.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
shell-words.workspace = true
tempfile.workspace = true

[lints]
workspace = true
