[package]
name = "htmlcut-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
name = "htmlcut_cli"
path = "src/lib.rs"

[[bin]]
name = "htmlcut"
path = "src/main.rs"

[dependencies]
clap.workspace = true
htmlcut-core.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_path_to_error.workspace = true
thiserror.workspace = true
url.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
regex.workspace = true
shell-words.workspace = true
htmlcut-tempdir.workspace = true

[lints]
workspace = true
