[package]
name = "htmlcut-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Library for extracting and inspecting HTML with CSS selectors, literal or regex slicing, and structured diagnostics."

[dependencies]
ego-tree.workspace = true
regex.workspace = true
scraper.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
ureq.workspace = true
url.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
