[package]
name = "htmlcut-tempdir"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false
description = "Internal temporary-directory helper for HTMLCut maintenance and tests."

[lints]
workspace = true
