[dependencies.ego-tree]
version = "0.11.0"

[dependencies.regex]
version = "1.13.0"

[dependencies.schemars]
features = ["url2"]
version = "1.2.1"

[dependencies.scraper]
default-features = false
features = ["errors"]
package = "htmlcut-scraper"
path = "vendor/scraper"
version = "0.27.0-htmlcut.1"

[dependencies.selectors]
package = "htmlcut-selectors"
path = "vendor/selectors"
version = "0.38.0-htmlcut.1"

[dependencies.serde]
features = ["derive"]
version = "1.0.228"

[dependencies.serde_json]
version = "1.0.150"

[dependencies.sha2]
version = "0.11.0"

[dependencies.thiserror]
version = "2.0.18"

[dependencies.ureq]
default-features = false
features = [
    "gzip",
    "rustls",
    "platform-verifier",
]
optional = true
version = "3.3.0"

[dependencies.url]
features = ["serde"]
version = "2.5.8"

[[example]]
name = "request_and_result_namespaces"
path = "examples/request_and_result_namespaces.rs"

[[example]]
name = "reusable_extraction_definition"
path = "examples/reusable_extraction_definition.rs"

[features]
default = []
http-client = ["dep:ureq"]

[lib]
name = "htmlcut_core"
path = "src/lib.rs"

[lints.clippy]
all = "warn"

[lints.rust]
unsafe_code = "forbid"
unsafe_op_in_unsafe_fn = "deny"
unused_must_use = "deny"

[package]
authors = ["Ervins Strauhmanis"]
autobenches = false
autobins = false
autoexamples = false
autolib = false
autotests = false
build = false
description = "Library for extracting and inspecting HTML with CSS selectors, literal or regex slicing, and structured diagnostics."
edition = "2024"
homepage = "https://github.com/resoltico/HTMLCut"
license = "MIT"
name = "htmlcut-core"
readme = false
repository = "https://github.com/resoltico/HTMLCut"
rust-version = "1.97"
version = "11.0.1"

[workspace]
